fixed more styling of collapsCat.css lists
git-svn-id: https://plugins.svn.wordpress.org/collapsing-categories/trunk@37124 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/collapsCat.css
+++ b/collapsCat.css
@@ -13,4 +13,5 @@ font-size:1.3em;
 #sidebar li.collapsCat {list-style-type:none}
 #sidebar li.collapsCatPost {
              text-indent:0em;
+             list-style-type:square;
              margin:0 0 0 1em;}
